--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 <h1>Three.js – Classic techniques</h1>
 <canvas class="webgl"></canvas>
-<!--<script>-->
-<!--  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };-->
-<!--</script>-->
-<!--<script defer src="/_vercel/insights/script.js"></script>-->
+<script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 <script type="module" src="/src/main.js"></script>
 </body>
 </html>
