--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
 </script>
 <script defer src="/_vercel/insights/script.js"></script>
-<script type="module" src="/src/house.js"></script>
+<script type="module" src="/src/house.jsnpm i vite-plugin-chunk-split -D"></script>
 </body>
 </html>
