--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
 </script>
 <script defer src="/_vercel/insights/script.js"></script>
-<script type="module" src="/src/particles.js"></script>
+<script type="module" src="/src/galaxy-generator.js"></script>
 </body>
 </html>
