--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Three.js – Classic techniques</title>
 </head>
 <body>
-<h1>Three.js – Classic techniques</h1>
+<h1>Three.js – Galaxy generator</h1>
 <canvas class="webgl"></canvas>
 <script>
   window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
