--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/src/style.css">
-  <title>Three.js – Classic techniques</title>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="/src/style.css">
+    <title>Three.js – Classic techniques</title>
 </head>
 <body>
 <h1>Three.js – Galaxy generator</h1>
 <canvas class="webgl"></canvas>
+<section class="section">
+    <h1>My Portfolio</h1>
+</section>
+<section class="section">
+    <h2>My projects</h2>
+</section>
+<section class="section">
+    <h2>Contact me</h2>
+</section>
 <script>
-  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    window.va = window.va || function () {
+        (window.vaq = window.vaq || []).push(arguments);
+    };
 </script>
 <script defer src="/_vercel/insights/script.js"></script>
-<script type="module" src="/src/galaxy-generator.js"></script>
+<script type="module" src="/src/scroll-animation.js"></script>
 </body>
 </html>
