Add objects and parallax

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Three.js – Classic techniques</title>
 </head>
 <body>
-<h1>Three.js – Galaxy generator</h1>
+<h1>Three.js – Scroll based animation</h1>
 <canvas class="webgl"></canvas>
 <section class="section">
     <h1>My Portfolio</h1>
