--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 <canvas class="webgl"></canvas>
 <section class="section">
-    <h1>My Portfolio</h1>
+    <h1>Scroll</h1>
 </section>
 <section class="section">
-    <h2>My projects</h2>
+    <h2>Based</h2>
 </section>
 <section class="section">
-    <h2>Contact me</h2>
+    <h2>Animation</h2>
 </section>
 <script>
     window.va = window.va || function () {
