--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/src/style.css">
     <title>Three.js – Classic techniques</title>
 </head>
-<body>
+<body class="slider">
 <canvas class="webgl"></canvas>
 <section class="section">
     <h1>Scroll</h1>
