--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="/src/style.css">
-    <title>Three.js – Classic techniques</title>
+    <title>Three.js – Scroll based animation</title>
 </head>
 <body class="slider">
 <canvas class="webgl"></canvas>
 <section class="section">
-    <h2>Scroll</h2>
+    <h1>Scroll</h1>
 </section>
 <section class="section">
     <h2>Based</h2>
